--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -39,7 +39,7 @@
 
     <!-- Mensagem de sucesso -->
     <div id="successMessage" class="success-notification" style="display:none;">
-        <h2>As Instruções Enviadas</h2>
+        <h2>Instruções Enviadas</h2>
         <p>Verifique seu e-mail para redefinir sua senha!</p>
     </div>
 
