--- a/static/usuarios/css/login.css
+++ b/static/usuarios/css/login.css
@@ -374,18 +374,21 @@ body {
 
 
 .alert-container {
-    margin: 10px 0;
+    position: absolute;
+    top: 20px;
+    left: 41%;
+    margin-left: 60px;
 }
 
 .alert {
+    text-align: center;
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 10px;
 }
 
 .alert-success {
-    background-color: #d4edda;
-    color: #155724;
+   display: none;
 }
 
 .alert-error, .alert-danger {
@@ -497,6 +500,19 @@ body {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+/* Animação para desaparecer */
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    80% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 
