--- a/templates/conteudos/relatorios.html
+++ b/templates/conteudos/relatorios.html
@@ -145,8 +145,9 @@
     .btn {
       padding: 10px 20px;
       border: none;
-      border-radius: 20px;
+      border-radius: 5px;
       cursor: pointer;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     }
 
     .btn-primary {
