Entrega Sistema De Demandas Querolar

--- a/templates/usuarios/sidebar.html
+++ b/templates/usuarios/sidebar.html
@@ -15,7 +15,7 @@
     </li>
     <li>
       <a href="#" class="item-sidebar" data-url="{% url 'configuracoes' %}" data-id="configuracoes"><span
-          class="icone"><i class="fa-solid fa-gear"></i></span><span class="texto">Projetos</span></a>
+          class="icone"><i class="fa-solid fa-gear"></i></span><span class="texto">Demandas</span></a>
     </li>
     <li>
       <a href="#" class="item-sidebar" data-url="{% url 'calendario' %}" data-id="calendario"><span class="icone"><i
